# pyo3-antelope-rs

./: .gitignore  Cargo.toml  README.md  default.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: wire_spec.md
pysrc/antelope_rs/: abi_view.py
rust/: Cargo.toml
rust/src/: lib.rs  sign.rs  types.rs  utils.rs
rust/src/proxies/: abi.rs  asset.rs  checksums.rs  float.rs  mod.rs  name.rs  private_key.rs  public_key.rs  signature.rs  sym.rs  sym_code.rs  time.rs  varint.rs
rust/src/serializer/: decode.rs  encode.rs
src/: abi_store.rs  decode.rs  encode.rs  lib.rs  types.rs  utils.rs
src/antelope_rs/: __init__.py  abi.py  codec.py  meta.py  testing.py  utils.py
src/antelope_rs/abi/: __init__.py  _defs.py  _struct.py  _struct_ns.py  _validation.py  msig.json  standard.json  structs.py  synth.json
src/antelope_rs/testing/: __init__.py
src/proxies/: abi.rs  asset.rs  checksums.rs  mod.rs  name.rs  private_key.rs  public_key.rs  signature.rs  sym.rs  sym_code.rs
tests/: conftest.py  test_msgspec.py  test_roundtrip.py
