[package]
name = "pyo3-antelope-rs"
version = "0.8.0"
edition = "2021"

[lib]
name = "antelope_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py39", "rust_decimal"]}
pyo3-tools = { git = "https://github.com/guilledk/pyo3-tools.git", branch = "master"}
antelope-client = { git = "https://github.com/openrepublic/antelope-rs.git", rev = "d50cea85971c4296f06a110e7778271fb0da7172" }
# antelope-client = { path = "../antelope-rs/crates/antelope" }
chrono = "0.4.39"
pyo3-log = "0.12.1"
rust_decimal = "1.36.0"
serde_json = "1.0.140"
