[project]
name = "pyo3-antelope-rs"
version = "0.5.0"
description = ""
authors = [{ name = "Guillermo Rodriguez", email = "guillermo@telos.net" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "maturin>=1.8.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
