[project]
name = 'pyo3-antelope-rs'
version = '1.3.1'
description = 'PyO3 bindings to telosnetwork/antelope-rs + some QoL addons'
authors = [{ name = 'Guillermo Rodriguez', email = 'guillermo@telos.net' }]
requires-python = '>=3.9'
readme = 'README.md'
dependencies = [
    'frozendict>=2.4.6',
    'maturin>=1.8.2',
    'msgspec>=0.19.0',
    'typing-extensions>=4.14.0',
]

[build-system]
requires = ['maturin>=1.0,<2.0']
build-backend = 'maturin'

[tool.maturin]
# profile = 'release-with-debug'
profile = 'release'
python-source = 'src'
python-packages = ['antelope_rs']
module-name = 'antelope_rs._lowlevel'
manifest-path = 'rust/Cargo.toml'
features = ['pyo3/extension-module', 'pyo3/abi3-py39']
include = ['src/antelope_rs/abi/*.json']

[dependency-groups]
dev = [
    'deepdiff>=8.5.0',
    'hypothesis>=6.135.1',
    'pdbp>=1.7.0',
    'pytest>=8.4.0',
    'pytest-xdist>=3.7.0',
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'
line-ending = 'lf'
preview = true
docstring-code-format = true

[tool.ruff.lint]
select = ['Q']  # flake8-quotes rules
ignore = ['Q002', 'D300']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'
